🧑‍💻 Ensure Baseliner grid stretches to both panes.

--- a/src/styles/global/body.styl
+++ b/src/styles/global/body.styl
@@ -10,8 +10,6 @@
 
 html
     box-sizing border-box
-    width 100%
-    height 100%
 
     font-size 12px
     line-height 1.5
@@ -22,9 +20,8 @@ html
     font-variant-numeric oldstyle-nums proportional-nums
 
 body
-    width 100%
-    height 100%
-
     color gray-900
-
     background-color gray-100
+
+body.baseliner::after
+    width 200vw !important
